# p2p-crawler

./: .git-status.sh  .gitignore  CHANGELOG.md  Makefile  README.md  compose.yaml  flake.nix  module.nix  pyproject.toml
images/crawler/: Dockerfile  requirements.txt
images/crawler/src/: crawler.py  decorators.py  dnsseeds.py  network.py  node.py  output.py  protocol.py  run.py
images/tor/: Dockerfile
src/p2p_crawler/: address.py  config.py  crawler.py  dnsseeds.py  history.py  network.py  node.py  output.py  protocol.py  run.py
tools/: addr_data_decoder.py  fill_missing_data.py
