[tool.poetry]
name = "p2p-crawler"
version = "3.1.4"
description = "Crawler for Bitcoin's P2P network"
authors = ["virtu <virtu@cryptic.to>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
i2plib = "^0.0.14"
pytest = "^7.4.2"
google-cloud-storage = "^2.12.0"
python-socks = {extras = ["asyncio"], version = "^2.4.3"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
p2p-crawler = "p2p_crawler.run:main"
